--- a/App.Api/appsettings.Development.json
+++ b/App.Api/appsettings.Development.json
@@ -19,7 +19,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=Test;User ID=sa;Password=v7A3Xb7moTrHI28;Persist Security Info=True;TrustServerCertificate=True;",
-    "MongoDBConnection": "mongodb://rdudiver:ratonera*1@localhost:27017/CallRest"
+    "MongoDBConnection": "mongodb+srv://mesanotify:Hz9FBsg2pl4lpvrm@mesanotify.0bvibzv.mongodb.net/?retryWrites=true&w=majority"
 
   },
   "Logging": {
