Login and token

--- a/App.Api/appsettings.Development.json
+++ b/App.Api/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+
+  "JwtConfig": {
+    "Secret": "bVcTyr4Fv5t6J7h8K9L0bVcTyr4Fv5t6J7h8K9L0"
+  },
+  
+
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Elastic.CommonSchema.Serilog" ],
     "MinimumLevel": "Debug",
